--- a/main/templates/main/admin/upravljanje_korisnicima/uredivanje_korisnika/edit_user.html
+++ b/main/templates/main/admin/upravljanje_korisnicima/uredivanje_korisnika/edit_user.html
@@ -3,17 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Uredi korisnika</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles/global0.css' %}">
 </head>
 <body>
-    <h1>Uredi korisnika</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="username">Korisničko ime:</label>
-        <input type="text" id="username" name="username" value="{{ user.username }}">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="{{ user.email }}">
-        <button type="submit">Spremi</button>
-    </form>
-    <a href="{% url 'main:manage_users' %}">Nazad</a>
+
+    
+    <div class="header">
+        <a href="{% url 'main:manage_users' %}">Nazad</a>
+    </div> <!-- .header end -->
+
+    <div class="body">
+        <div class="container">
+            <h1>Uredi korisnika</h1>
+            <form method="post">
+                {% csrf_token %}
+                <label for="username">Korisničko ime:</label>
+                <input type="text" id="username" name="username" value="{{ user.username }}">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" value="{{ user.email }}">
+                <button type="submit">Spremi</button>
+            </form>
+     
+
+        </div> <!-- .conteiner end-->
+
+    </div> <!-- .body end-->
+
+   
 </body>
 </html>
